--- a/index.html
+++ b/index.html
@@ -233,11 +233,12 @@ textarea{min-height:100px}
   </main>
 </div>
 
-<div class="footer">
-  <div id="visitorCounter" style="margin-top:6px;font-size:12px;color:#666;">Loading visitors...</div>
-
+  <div class="footer">
   © SOCanalyst — Modules & quizzes saved locally in your browser.
-</div>
+  <br>
+  <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0010&nbdigits=5&type=page&initCount=0" 
+       title="Web Counter" alt="hits counter" border="0">
+  </div>
 
 
 <!-- admin modal -->
