--- a/index.html
+++ b/index.html
@@ -234,10 +234,7 @@ textarea{min-height:100px}
 </div>
 
   <div class="footer">
-    © SOCanalyst — Modules & quizzes saved locally in your browser.
-    <br>
-    <img src="https://hitwebcounter.com/counter/counter.php?page=10584242&style=0008&nbdigits=6&type=ip&initCount=0" 
-         title="Visitor Counter" alt="Visitor Counter" border="0">
+    © BitBytes - Always on Top
   </div>
 
 
